--- a/css/style.css
+++ b/css/style.css
@@ -7,12 +7,6 @@ width: 20px;
 .q5{
 width: 20px;
 }
-.nav-link{
-    color: white;
-}
-.navbar{
-color: #6E349D;
-}
 .q1{
-    color: #71389E;
+    background-color: #6E349D;
 }
