--- a/css/style.css
+++ b/css/style.css
@@ -13,3 +13,9 @@ width: 20px;
 .nav-link{
     color: white;
 }
+.btn{
+    color: white;
+    padding: 5px 20px;
+    border: 1px solid white;
+    border-radius: 20px;
+}
