--- a/css/style.css
+++ b/css/style.css
@@ -19,3 +19,11 @@ width: 20px;
     border: 1px solid white;
     border-radius: 20px;
 }
+.q6{
+text-decoration: none;
+color: white;
+}
+.q7{
+text-decoration: none;
+color: white;
+}
