--- a/css/style.css
+++ b/css/style.css
@@ -38,3 +38,6 @@ margin-right: 5px;
 .q6{
     margin-right: 5px;
 }
+.w1{
+    background-image: url("https://mobeasy.com/wp-content/uploads/2021/05/Component-24-–-1.jpg");
+}
