--- a/css/style.css
+++ b/css/style.css
@@ -41,3 +41,8 @@ margin-right: 5px;
 .w1{
     background-image: url("https://mobeasy.com/wp-content/uploads/2021/05/Component-24-–-1.jpg");
 }
+.w2{
+    color: white;
+    font-size: 34px;
+    margin-top: 25px;
+}
