--- a/css/style.css
+++ b/css/style.css
@@ -68,3 +68,8 @@ margin-right: 5px;
     font-size: 22px;
     font-weight: 500;
 }
+.w6{
+    width: 500px;
+    margin-left: 35px;
+    margin-top: 25px;
+}
