--- a/css/style.css
+++ b/css/style.css
@@ -80,3 +80,8 @@ margin-right: 5px;
     color: #666666;
     font-weight: 600;
 }
+.e6{
+    color: #666666;
+    font-size: 22px;
+    margin-left: 44px;
+}
