--- a/css/style.css
+++ b/css/style.css
@@ -85,3 +85,10 @@ margin-right: 5px;
     font-size: 22px;
     margin-left: 44px;
 }
+.e7{
+    margin-left: 95px;
+    width: 255px;
+}
+.e8{
+    margin-left: 35px;
+}
