--- a/css/style.css
+++ b/css/style.css
@@ -92,3 +92,12 @@ margin-right: 5px;
 .e8{
     margin-left: 35px;
 }
+.e10{
+    margin-top: 13px;
+    margin-left: 65px;
+}
+.e11{
+    margin-top: -4px;
+    margin-bottom: 33px;
+    margin-left: 20px;
+}
