--- a/css/style.css
+++ b/css/style.css
@@ -101,3 +101,13 @@ margin-right: 5px;
     margin-bottom: 33px;
     margin-left: 20px;
 }
+.r2{
+    color: white;
+}
+.r3{
+    color: white;
+    font-size: 19px;
+}
+.r1{
+    background-color: #8449AE;
+}
