--- a/css/style.css
+++ b/css/style.css
@@ -111,3 +111,11 @@ margin-right: 5px;
 .r1{
     background-color: #8449AE;
 }
+.r4{
+text-decoration: none;
+color: white;
+}
+.r5{
+text-decoration: none;
+color: #8449AE;
+}
