--- a/css/style.css
+++ b/css/style.css
@@ -131,3 +131,12 @@ font-weight: 600;
     font-size: 20px;
 
 }
+.t2{
+    color: #3F1D3C;
+}
+.t3{color: #3F1D3C;}
+.t4{color: #3F1D3C;}
+.t5{color: #3F1D3C;}
+.t6{color: #3F1D3C;}
+.t7{color: #3F1D3C;}
+.t8{color: #3F1D3C;}
