--- a/css/style.css
+++ b/css/style.css
@@ -147,5 +147,12 @@ background-color: #FFFFFF;
 padding: 12px 25px;
 font-size: 20px;
 font-weight: 600;
-border: 1px solid #3F1D3C;
+border: 2px solid #3F1D3C;
+border-radius: 24px;
+}
+.t1{
+    padding: 15px 20px;
+    background-color: #F8F0FF;
+    border: 1px solid #F8F0FF;
+    border-radius: 10px;
 }
