--- a/css/style.css
+++ b/css/style.css
@@ -159,3 +159,13 @@ border-radius: 24px;
 .y2{
     color: #FFC147;
 }
+.y10{
+    text-decoration: none;
+color: white;
+background-color: #FFC147;
+padding: 12px 25px;
+font-size: 20px;
+font-weight: 600;
+border: 2px solid #FFC147;
+border-radius: 24px;
+}
