--- a/css/style.css
+++ b/css/style.css
@@ -169,3 +169,6 @@ font-weight: 600;
 border: 2px solid #FFC147;
 border-radius: 24px;
 }
+.u1{margin-right: -20px;}
+.u2{ margin-right: -20px;}
+.u3{}
