--- a/css/style.css
+++ b/css/style.css
@@ -155,6 +155,8 @@ border-radius: 24px;
     background-color: #F8F0FF;
     border: 1px solid #F8F0FF;
     border-radius: 10px;
+    box-shadow: 1px 5px 15px 5px #000000;
+    
 }
 .y2{
     color: #FFC147;
